# OceanFFT_Experimental

./: README.md
Sycl_Migrated/: CMakeLists.txt
Sycl_Migrated/Common/: helper_cuda.h  helper_cuda.h.yaml
Sycl_Migrated/Samples/4_CUDA_Libraries/oceanFFT/: a.out  compile.sh  oceanFFT.cpp.dp.cpp  oceanFFT_kernel.dp.cpp
Sycl_Migrated/include/dpct/: fft_utils.hpp
